@@ -786,6 +786,64 @@ class Universe(object):
         self._topology.add_TopologyAttr(topologyattr)
         self._process_attr(topologyattr)
 
+    def del_TopologyAttr(self, topologyattr):
+        """Remove a topology attribute from the Universe
+
+        Removing a TopologyAttribute from the Universe makes it unavailable to
+        all AtomGroups etc throughout the Universe.
+
+        Parameters
+        ----------
+        topologyattr: TopologyAttr or string
+          Either a MDAnalysis TopologyAttr object or the name of a possible
+          topology attribute.
+
+        Example
+        -------
+        For example to remove bfactors to a Universe:
+
+        >>> u.del_TopologyAttr('bfactors')
+        >>> hasattr(u.atoms[:3], 'bfactors')
+        False
+
+        .. versionadded:: 2.0.0
+        """
+
+        if not isinstance(topologyattr, str):
+            try:
+                topologyattr = topologyattr.attrname
+            except AttributeError:
+                # either TopologyGroup or not valid
+                try:
+                    # this may not end well
+                    # e.g. matrix -> matrices
+                    topologyattr = topologyattr.btype + "s"
+                except AttributeError:
+                    raise ValueError("Topology attribute must be str or "
+                                     "TopologyAttr object or class. "
+                                     f"Given: {type(topologyattr)}") from None
+        
+        try:
+            topologyattr = _TOPOLOGY_ATTRS[topologyattr].attrname
+        except KeyError:
+            errmsg = (
+                "Unrecognised topology attribute: '{}'."
+                "  Possible values: '{}'\n"
+                "To raise an issue go to: "
+                "https://github.com/MDAnalysis/mdanalysis/issues"
+                "".format(
+                    topologyattr, ', '.join(
+                        sorted(_TOPOLOGY_ATTRS.keys()))))
+            raise ValueError(errmsg) from None
+
+        try:
+            topattr = getattr(self._topology, topologyattr)
+        except AttributeError:
+            raise ValueError(f"Topology attribute {topologyattr} "
+                             "not in Universe.") from None
+        self._topology.del_TopologyAttr(topattr)
+        self._unprocess_attr(topattr)
+
     def _process_attr(self, attr):
         """Squeeze a topologyattr for its information
 
@@ -819,6 +877,28 @@ class Universe(object):
         # Universe transplants
         for funcname, meth in attr.transplants['Universe']:
             setattr(self.__class__, funcname, meth)
+
+    def _unprocess_attr(self, attr):
+        """
+        Undo all the stuff in _process_attr.
+
+        If the topology attribute is not present, nothing happens
+        (silent fail).
+        """
+        for cls in attr.target_classes:
+            self._class_bases[cls]._del_prop(attr)
+
+        # Group transplants
+        for cls in (Atom, Residue, Segment, GroupBase,
+                    AtomGroup, ResidueGroup, SegmentGroup):
+            for funcname, _ in attr.transplants[cls]:
+                if hasattr(self._class_bases[cls], funcname):
+                    delattr(self._class_bases[cls], funcname)
+        # Universe transplants
+        for funcname, _ in attr.transplants['Universe']:
+            if hasattr(self.__class__, funcname):
+                delattr(self.__class__, funcname)
+
 
     def add_Residue(self, segment=None, **attrs):
         """Add a new Residue to this Universe
